crates/turborepo/tests/snapshots/query__task_dependencies__query_get_tasks_for_app-a_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "package": {
      "tasks": {
        "items": [
          {
            "name": "build"
          },
          {
            "name": "custom"
          },
          {
            "name": "test"
          }
        ]
      }
    }
  }
}
