crates/turborepo/tests/snapshots/query__task_dependencies__query_get_tasks_for_app-a_with_dependencies_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "package": {
      "tasks": {
        "items": [
          {
            "fullName": "app-a#build",
            "directDependencies": {
              "items": []
            }
          },
          {
            "fullName": "app-a#build0",
            "directDependencies": {
              "items": [
                {
                  "fullName": "app-a#prepare"
                },
                {
                  "fullName": "lib-a#build0"
                }
              ]
            }
          },
          {
            "fullName": "app-a#build1",
            "directDependencies": {
              "items": [
                {
                  "fullName": "lib-a#build1"
                }
              ]
            }
          },
          {
            "fullName": "app-a#build2",
            "directDependencies": {
              "items": [
                {
                  "fullName": "app-a#custom"
                }
              ]
            }
          },
          {
            "fullName": "app-a#custom",
            "directDependencies": {
              "items": []
            }
          },
          {
            "fullName": "app-a#prepare",
            "directDependencies": {
              "items": []
            }
          },
          {
            "fullName": "app-a#side-quest",
            "directDependencies": {
              "items": [
                {
                  "fullName": "app-a#prepare"
                }
              ]
            }
          },
          {
            "fullName": "app-a#test",
            "directDependencies": {
              "items": [
                {
                  "fullName": "app-a#prepare"
                },
                {
                  "fullName": "lib-a#build0"
                }
              ]
            }
          }
        ]
      }
    }
  }
}
