crates/turborepo/tests/snapshots/query__task_dependencies__query_get_tasks_for_app-a_with_dependencies_and_dependents_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "package": {
      "tasks": {
        "items": [
          {
            "fullName": "app-a#build",
            "allDependencies": {
              "items": []
            }
          },
          {
            "fullName": "app-a#build0",
            "allDependencies": {
              "items": [
                {
                  "fullName": "app-a#prepare"
                },
                {
                  "fullName": "lib-a#build0"
                },
                {
                  "fullName": "lib-a#prepare"
                },
                {
                  "fullName": "lib-b#build0"
                },
                {
                  "fullName": "lib-b#prepare"
                },
                {
                  "fullName": "lib-d#build0"
                },
                {
                  "fullName": "lib-d#prepare"
                }
              ]
            }
          },
          {
            "fullName": "app-a#build1",
            "allDependencies": {
              "items": [
                {
                  "fullName": "lib-a#build1"
                },
                {
                  "fullName": "lib-b#build1"
                },
                {
                  "fullName": "lib-d#build1"
                }
              ]
            }
          },
          {
            "fullName": "app-a#build2",
            "allDependencies": {
              "items": [
                {
                  "fullName": "app-a#custom"
                }
              ]
            }
          },
          {
            "fullName": "app-a#custom",
            "allDependencies": {
              "items": []
            }
          },
          {
            "fullName": "app-a#prepare",
            "allDependencies": {
              "items": []
            }
          },
          {
            "fullName": "app-a#side-quest",
            "allDependencies": {
              "items": [
                {
                  "fullName": "app-a#prepare"
                }
              ]
            }
          },
          {
            "fullName": "app-a#test",
            "allDependencies": {
              "items": [
                {
                  "fullName": "app-a#prepare"
                },
                {
                  "fullName": "lib-a#build0"
                },
                {
                  "fullName": "lib-a#prepare"
                },
                {
                  "fullName": "lib-b#build0"
                },
                {
                  "fullName": "lib-b#prepare"
                },
                {
                  "fullName": "lib-d#build0"
                },
                {
                  "fullName": "lib-d#prepare"
                }
              ]
            }
          }
        ]
      }
    }
  }
}
