crates/turborepo/tests/snapshots/query__task_dependencies__query_get_tasks_for_app-a_with_indirect_dependencies_(npm@10.5.0).snap
---
source: crates/turborepo/tests/query.rs
expression: query_output
---
{
  "data": {
    "package": {
      "tasks": {
        "items": [
          {
            "fullName": "app-a#build",
            "indirectDependencies": {
              "items": []
            }
          },
          {
            "fullName": "app-a#build0",
            "indirectDependencies": {
              "items": [
                {
                  "fullName": "lib-a#prepare"
                },
                {
                  "fullName": "lib-b#build0"
                },
                {
                  "fullName": "lib-b#prepare"
                },
                {
                  "fullName": "lib-d#build0"
                },
                {
                  "fullName": "lib-d#prepare"
                }
              ]
            }
          },
          {
            "fullName": "app-a#build1",
            "indirectDependencies": {
              "items": [
                {
                  "fullName": "lib-b#build1"
                },
                {
                  "fullName": "lib-d#build1"
                }
              ]
            }
          },
          {
            "fullName": "app-a#build2",
            "indirectDependencies": {
              "items": []
            }
          },
          {
            "fullName": "app-a#custom",
            "indirectDependencies": {
              "items": []
            }
          },
          {
            "fullName": "app-a#prepare",
            "indirectDependencies": {
              "items": []
            }
          },
          {
            "fullName": "app-a#side-quest",
            "indirectDependencies": {
              "items": []
            }
          },
          {
            "fullName": "app-a#test",
            "indirectDependencies": {
              "items": [
                {
                  "fullName": "lib-a#prepare"
                },
                {
                  "fullName": "lib-b#build0"
                },
                {
                  "fullName": "lib-b#prepare"
                },
                {
                  "fullName": "lib-d#build0"
                },
                {
                  "fullName": "lib-d#prepare"
                }
              ]
            }
          }
        ]
      }
    }
  }
}
